// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`insert dynamic fields 1`] = `
Array [
  Object {
    "config": Object {
      "description": "",
      "schema": Object {
        "fields": Array [
          Object {
            "description": "Time when event happened",
            "mode": "REQUIRED",
            "name": "timestamp",
            "type": "TIMESTAMP",
          },
          Object {
            "description": "Tracking id, also called DeviceID in some contexes, use this primarily to identify a singular user",
            "mode": "REQUIRED",
            "name": "tracking_id",
            "type": "STRING",
          },
        ],
      },
      "timePartitioning": Object {
        "expirationMS": "7776000000",
        "field": "timestamp",
        "type": "DAY",
      },
    },
    "name": "embark_track",
    "rows": Array [],
  },
]
`;

exports[`insert dynamic fields in aggregate 1`] = `
Array [
  Object {
    "config": Object {
      "description": "",
      "schema": Object {
        "fields": Array [
          Object {
            "description": "Time when event happened",
            "mode": "REQUIRED",
            "name": "timestamp",
            "type": "TIMESTAMP",
          },
          Object {
            "description": "Tracking id, also called DeviceID in some contexes, use this primarily to identify a singular user",
            "mode": "REQUIRED",
            "name": "tracking_id",
            "type": "STRING",
          },
        ],
      },
      "timePartitioning": Object {
        "expirationMS": "7776000000",
        "field": "timestamp",
        "type": "DAY",
      },
    },
    "name": "embark_track",
    "rows": Array [],
  },
  Object {
    "config": Object {
      "description": "",
      "schema": Object {
        "fields": Array [
          Object {
            "description": "String name of event, for example screen_view_offer",
            "mode": "REQUIRED",
            "name": "event",
            "type": "STRING",
          },
          Object {
            "description": "Unique ID of the event",
            "mode": "REQUIRED",
            "name": "event_id",
            "type": "STRING",
          },
          Object {
            "description": "Time when event happened",
            "mode": "REQUIRED",
            "name": "timestamp",
            "type": "TIMESTAMP",
          },
          Object {
            "description": "Tracking id, also called DeviceID in some contexes, use this primarily to identify a singular user",
            "mode": "REQUIRED",
            "name": "tracking_id",
            "type": "STRING",
          },
        ],
      },
      "timePartitioning": Object {
        "expirationMS": "7776000000",
        "field": "timestamp",
        "type": "DAY",
      },
    },
    "name": "aggregate",
    "rows": Array [],
  },
]
`;
